--- a/msjd.html
+++ b/msjd.html
@@ -4,28 +4,40 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Masjid Al-Ikhlas</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>Masjid Al-Ikhlas</h1>
     <nav>
-      <a href="index.html">Beranda</a>
-      <a href="about.html">Tentang</a>
+      <a href="#beranda">Beranda</a>
+      <a href="#tentang">Tentang</a>
       <a href="#jadwal">Jadwal Sholat</a>
-      <a href="contact.html">Kontak</a>
+      <a href="#kontak">Kontak</a>
     </nav>
   </header>
 
   <main>
-    <section>
-      <h2>Selamat datang di Website Resmi Masjid Al-Ikhlas</h2>
-      <p>Tempat ibadah dan kegiatan umat Islam di lingkungan kita.</p>
+    <section id="beranda">
+      <h2>Selamat Datang</h2>
+      <p>Selamat datang di website resmi Masjid Al-Ikhlas. Masjid ini merupakan pusat kegiatan keagamaan dan sosial masyarakat sekitar.</p>
+    </section>
+
+    <section id="tentang">
+      <h2>Tentang Masjid</h2>
+      <p>Masjid Al-Ikhlas didirikan pada tahun 1995 dan terus berkembang menjadi pusat kegiatan umat Islam seperti pengajian, santunan, dan kajian rutin.</p>
     </section>
 
     <section id="jadwal">
       <h2>Jadwal Sholat Hari Ini</h2>
-      <div id="jadwal-sholat">Memuat...</div>
+      <div id="jadwal-sholat">Memuat jadwal...</div>
+    </section>
+
+    <section id="kontak">
+      <h2>Kontak & Lokasi</h2>
+      <p>Alamat: Jl. Raya Masjid No. 123, Karanganyar</p>
+      <p>Telepon: 0812-3456-7890</p>
+      <iframe src="https://maps.google.com/maps?q=Masjid%20Al-Ikhlas&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="300" frameborder="0"></iframe>
     </section>
   </main>
 
@@ -33,6 +45,56 @@
     <p>&copy; 2025 Masjid Al-Ikhlas</p>
   </footer>
 
-  <script src="jadwal/jadwal.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
+<!-- File style.css -->
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  header {
+    background-color: #02735E;
+    color: white;
+    padding: 1rem;
+    text-align: center;
+  }
+  nav a {
+    margin: 0 1rem;
+    color: white;
+    text-decoration: none;
+  }
+  main {
+    padding: 2rem;
+  }
+  section {
+    margin-bottom: 2rem;
+  }
+  footer {
+    background-color: #f1f1f1;
+    text-align: center;
+    padding: 1rem;
+  }
+</style>
+
+<!-- File script.js -->
+<script>
+  fetch("https://api.myquran.com/v1/sholat/jadwal/3315/2025/06/10")
+    .then(response => response.json())
+    .then(data => {
+      const jadwal = data.data.jadwal;
+      document.getElementById("jadwal-sholat").innerHTML = `
+        Subuh: ${jadwal.subuh}<br>
+        Dzuhur: ${jadwal.dzuhur}<br>
+        Ashar: ${jadwal.ashar}<br>
+        Maghrib: ${jadwal.maghrib}<br>
+        Isya: ${jadwal.isya}
+      `;
+    })
+    .catch(() => {
+      document.getElementById("jadwal-sholat").innerText = "Gagal memuat jadwal sholat.";
+    });
+</script>
